# Design-Patterns

./: .gitignore  README.md  pyproject.toml
DecoratorPattern/: BasePizza.py  BombaySupreme.py  Margharita.py  MexicanBomb.py  main.py
DecoratorPattern/Decorators/: ExtraCheese.py  FriedOnions.py  GarlicOil.py  Mushroom.py  Toppings.py
Design_Food_Ordering_System/: main.py
Design_Food_Ordering_System/models/: customer.py  delivery_agent.py  enums.py  location.py  menu_item.py  order.py  order_item.py  payment.py  promotion.py  rating.py  restaurant.py
Design_Food_Ordering_System/observers/: notification_service.py
Design_Food_Ordering_System/patterns/: delivery_assignment_strategy.py  order_observer.py  order_state.py  payment_strategy.py
Design_Food_Ordering_System/services/: order_service.py  rating_service.py
Design_Food_Ordering_System/states/: cancelled.py  confirmed_state.py  delivered.py  out_for_delivery.py  placed_state.py  preparing_state.py
Design_Food_Ordering_System/strategies/: card_payment_strategy.py  cod_payment_strategy.py  least_busy_strategy.py  nearest_agent_strategy.py  wallet_payment_strategy.py
Design_LRU_Cache/: main.py
Design_Movie_Booking_System/: main.py
Designing_ATM/: autheticated_state.py  bank_service.py  card_inserted_state.py  idle_state.py  main.py
Designing_Elevator/: elevator_system.py  enums.py  main.py  ui_observer.py
Designing_Parking_Lot/: floor.py  main.py  parking_lot.py  spot.py  ticket.py  vehicles.py
StrategyPattern/: OffRoadVehicle.py  PassengerVehicle.py  Vehicle.py  main.py
(+48 files in other folders)
