[project]
name = "Design-Patterns"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohammed Ughratdar",email = "mohammed.ughratdar97@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
